# mlmodel-tflite

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  Makefile  README.md  conanfile.py  go.mod  go.sum  main.go  meta.json
.github/workflows/: build.yml  publish.yml  test.yml
cpp/: CMakeLists.txt  Makefile  conanfile.py
cpp-tflite/packaging/appimages/: viam-tflite-cpu-aarch64.yml
cpp-tflite/src/: tflite_cpu.cpp
cpp/src/: tflite_cpu.cpp
etc/docker/: Dockerfile.debian.bookworm  Dockerfile.debian.bookworm.dynamic  Dockerfile.ubuntu.jammy
go/: Makefile  go.mod  go.sum  main.go  meta.json
go/ml/inference/: tflite.go
go/tflitecpu/: .gitignore  tflite_cpu.go
ml/inference/: tflite.go  tflite_test.go
src/: tflite_cpu.cpp
